--- a/src/main/webapp/resources/css/results.css
+++ b/src/main/webapp/resources/css/results.css
@@ -1,24 +1,18 @@
 #ecf-results {padding: 1.5em;}
-
-.greenScore {
-	display: inline-block;
-	color: green;
-}
-
-.redScore {
-	display: inline-block;
-	color: red;
-}
+#ecf-results2 {padding: 1.5em;}
+#ecf-results3 {padding: 1.5em;}
+ 
 
 #ecfResultTable {
 	margin-bottom: 1em;
 	margin-top: 1em;
 }
 
-.score {
-	display: inline
+
+.numberOfAnswers {
+	display: inline;
 }
 
-.gap {
-	display: inline
+.inlineChart {
+	display: inline-block;
 }
