ESURVEY-6733: Adding export to Xls

--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -1995,6 +1995,13 @@ input[type="radio"][disabled], input[type="checkbox"][disabled], input[type="rad
 	margin: auto;
 }
 
+#canvasContainerLeft {
+	padding: 1em;
+	display: block;
+	max-width: 800px;
+}
+
+
 #ecfRespondentChart {
 	margin: 1em;
 }
